--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run tsc && node dist/index.js",
     "dev": "npm run tsc && node --inspect --enable-source-maps dist/index.js",
     "deploy-commands": "npm run tsc && node dist/deploy-commands.js",
+    "deploy-commands-global": "npm run tsc && node dist/deploy-commands.js --global",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
