Mainly logging changes but also other stuff

--- a/example.env
+++ b/example.env
@@ -6,3 +6,6 @@ RADIO_DIRECTORY_KEY=''
 # Required for Slash Command Registration
 DISCORD_OAUTH_CLIENT_ID=''
 DISCORD_GUILD_ID=''
+
+# If you want to send logs to Discord channel
+NOTIFICATION_CHANNEL_ID=''
