--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/opus": "^0.5.3",
-    "@discordjs/rest": "^0.16.0",
-    "@discordjs/voice": "^0.14.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.16.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.13.1",
     "dotenv": "^10.0.0",
